# cn_lab8_windowsClient

./: .clang-format  .gitignore  CMakeLists.txt  test.txt  xx.cpp
file/: recv_file.txt
include/: app_data.h  client.h  gui.h  gui.inl  package_factory.h  parser.h
include/imgui/: imgui_impl_dx12.cpp
include/test/: parser.h
output/: info.txt
src/: client.cpp  draw_gui.cpp  gui.cpp  main.cpp  package_factory.cpp
